# serializer version: 1
# name: test_postgres_array_filters[session-tracked-async-containedIn-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ $1::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-async-containedIn-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-async-contains-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> $1::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-async-contains-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-async-overlap-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && $1::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-async-overlap-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-sync-containedIn-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-sync-contains-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
# name: test_postgres_array_filters[session-tracked-sync-overlap-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && %(param_1)s::TEXT[]
   ORDER BY array_model.id ASC
  '''
# ---
